--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ https://templatemo.com/tm-531-reflux
                                 <b>2022-03:</b> 1 paper is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
                             </li>
                             <li style="margin: 5px;">
-                                <b>2022-03:</b> 3 paper is accepted by <a href="https://cvpr2022.thecvf.com/">CVPR'2022</a>.
+                                <b>2022-03:</b> 3 paper is accepted by <a href="https://cvpr2022.thecvf.com/">CVPR'2022</a>, 1 oral.
                             </li>
                             <li style="margin: 5px;">
                                 <b>2021-11:</b> Our python package for causal discovery <a href="https://causal-learn.readthedocs.io/en/latest/">causal-learn</a> is released. Any feedback is welcome.
@@ -397,7 +397,7 @@ https://templatemo.com/tm-531-reflux
                                         <br>
                                         Jinglin Xu*, Yongming Rao*, Xumin Yu, <strong>Guangyi Chen</strong>, Jie Zhou, and Jiwen Lu
                                         <br>
-                                         <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2022
+                                         <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2022, oral.
                                         <br>
                                         <a href="https://chengy12.github.io/files/02729.pdf">[PDF]</a> <a href="https://github.com/xujinglin/FineDiving">[Code]</a> <a href="https://sites.google.com/view/finediving">[Project]</a>
                                         <br>
