--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ https://templatemo.com/tm-531-reflux
                                         <br>
                                         Jinglin Xu*, Yongming Rao*, Xumin Yu, <strong>Guangyi Chen</strong>, Jie Zhou, and Jiwen Lu
                                         <br>
-                                         <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2022, oral.
+                                         <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2022, (<strong>Oral</strong>).
                                         <br>
                                         <a href="https://chengy12.github.io/files/02729.pdf">[PDF]</a> <a href="https://github.com/xujinglin/FineDiving">[Code]</a> <a href="https://sites.google.com/view/finediving">[Project]</a>
                                         <br>
