--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ https://templatemo.com/tm-531-reflux
                     <nav class="main-nav" role="navigation">
                         <ul class="main-menu">
                             <li><a href="#section1">About Me</a></li>
-                            <li><a href="#section2">My Research</a></li>
+                            <!-- <li><a href="#section2">My Research</a></li> -->
                             <li><a href="#section3">Publications</a></li>
                             <li><a href="#section4">Teaching</a></li>
                             <li><a href="#section5">Academic Activities</a></li>
@@ -198,7 +198,7 @@ https://templatemo.com/tm-531-reflux
         </div>
       </section>
        -->
-        <section class="section my-research" data-section="section2">
+        <!-- <section class="section my-research" data-section="section2">
             <div class="container">
                 <div class="section-heading">
                     <h2>My Research</h2>
@@ -232,15 +232,6 @@ https://templatemo.com/tm-531-reflux
                                         </figcaption>
                                     </figure>
                                 </div>
-<!--                                 <div class="isotope-item" data-type="trajectory">
-                                    <figure class="snip1321">
-                                        <img src="assets/images/denseclip.jpg" alt="sq-sample26" />
-                                        <figcaption>
-                                            <h4>DenseCLIP: Language-Guided Dense Prediction with Context-Aware Prompting</h4>
-                                            <span>DenseCLIP is a new framework for dense prediction by implicitly and explicitly leveraging the pre-trained knowledge from CLIP.</span>
-                                        </figcaption>
-                                    </figure>
-                                </div> -->
                                 <div class="isotope-item" data-type="action">
                                     <figure class="snip1321">
                                         <img src="assets/images/finediving.png" alt="sq-sample26" />
@@ -254,7 +245,6 @@ https://templatemo.com/tm-531-reflux
                                     <figure class="snip1321">
                                         <img src="assets/images/causal.png" alt="sq-sample26" />
                                         <figcaption>
-                                            <!-- <a href="assets/images/causal.png" data-lightbox="image-1" data-title="Caption"><i class="fa fa-search"></i></a> -->
                                             <h4>Human Trajectory Prediction via Counterfactual Analysis</h4>
                                             <span>We propose a counterfactual analysis method for human trajectory prediction to investigate the causality between the predicted trajectories and input clues and alleviate the negative effects brought by environment bias.</span>
                                         </figcaption>
@@ -264,7 +254,6 @@ https://templatemo.com/tm-531-reflux
                                     <figure class="snip1321">
                                         <img src="assets/images/model_dis.png" alt="sq-sample26" />
                                         <figcaption>
-                                            <!-- <a href="assets/images/portfolio-02.jpg" data-lightbox="image-1" data-title="Caption"><i class="fa fa-search"></i></a> -->
                                             <h4>Personalized Trajectory Prediction via Distribution Discrimination</h4>
                                             <span> We present a distribution discrimination (DisDis) method to predict personalized motion patterns by distinguishing the potential distributions in a self-supervised manner.</span>
                                         </figcaption>
@@ -274,7 +263,6 @@ https://templatemo.com/tm-531-reflux
                                     <figure class="snip1321">
                                         <img src="assets/images/CAL.png" alt="sq-sample26" />
                                         <figcaption>
-                                            <!-- <a href="assets/images/portfolio-03.jpg" data-lightbox="image-1" data-title="Caption"><i class="fa fa-search"></i></a> -->
                                             <h4>Counterfactual Attention Learning for Fine-Grained Visual Categorization and Re-identification</h4>
                                             <span>We propose to learn the attention with counterfactual causality, which provides a tool to measure the attention quality and a powerful supervisory signal to guide the learning process.</span>
                                         </figcaption>
@@ -284,7 +272,6 @@ https://templatemo.com/tm-531-reflux
                                     <figure class="snip1321">
                                         <img src="assets/images/apnet.png" alt="sq-sample26" />
                                         <figcaption>
-                                            <!-- <a href="assets/images/portfolio-04.jpg" data-lightbox="image-1" data-title="Caption"><i class="fa fa-search"></i></a> -->
                                             <h4>Person Re-identification via Attention Pyramid</h4>
                                             <span>We propose attention pyramid networks by the "split-attend-merge-stack" principle to jointly learn the attentions under different scales and obtain superior performance on many person re-identification datasets.</span>
                                         </figcaption>
@@ -299,20 +286,10 @@ https://templatemo.com/tm-531-reflux
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <!--                              <div class="isotope-item" data-type="reid">
-                                <figure class="snip1321">
-                                    <img src="assets/images/motivation_1040.png" alt="sq-sample26" />
-                                    <figcaption>
-                                        <h4>Deep Meta Metric Learning</h4>
-                                        <span>We propose a new perspective to understand the deep metric learning via meta-learning.</span>
-                                    </figcaption>
-                                </figure>
-                            </div> -->
                                 <div class="isotope-item" data-type="reid">
                                     <figure class="snip1321">
                                         <img src="assets/images/framework_0645.png" alt="sq-sample26" />
                                         <figcaption>
-                                            <!-- <a href="assets/images/portfolio-06.jpg" data-lightbox="image-1" data-title="Caption"><i class="fa fa-search"></i></a> -->
                                             <h4>Deep Credible Metric Learning for Unsupervised Domain Adaptation Person Re-identification</h4>
                                             <span>We propose to adaptively and progressively mine credible training samples to avoid the damage from the noise of predicted pseudo labels for unsupervised domain adaptation person ReID.</span>
                                         </figcaption>
@@ -322,7 +299,6 @@ https://templatemo.com/tm-531-reflux
                                     <figure class="snip1321">
                                         <img src="assets/images/icme21.png" alt="sq-sample26" />
                                         <figcaption>
-                                            <!-- <a href="assets/images/portfolio-05.jpg" data-lightbox="image-1" data-title="Caption"><i class="fa fa-search"></i></a> -->
                                             <h4>Temporal Label Aggregation for Unintentional Action Localization</h4>
                                             <span>We formulate the unintentional action localization as a temporal probabilistic regression problem, and propose to online aggregate multiple annotations using an attention model.</span>
                                         </figcaption>
@@ -332,7 +308,6 @@ https://templatemo.com/tm-531-reflux
                                     <figure class="snip1321">
                                         <img src="assets/images/1046.PNG" alt="sq-sample26" />
                                         <figcaption>
-                                            <!-- <a href="assets/images/portfolio-06.jpg" data-lightbox="image-1" data-title="Caption"><i class="fa fa-search"></i></a> -->
                                             <h4>Self-Critical Attention Learning for Person Re-Identification</h4>
                                             <span>We present a self-critical attention learning method which applies a critic module to examine and supervise the attention model.</span>
                                         </figcaption>
@@ -342,7 +317,7 @@ https://templatemo.com/tm-531-reflux
                         </div>
                     </div>
                 </div>
-        </section>
+        </section> -->
         <section class="section publications" data-section="section3">
             <div class="container">
                 <div class="section-heading">
