--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p> 
                             <li style="margin: 5px;">
+                                <b>2022-04:</b> 1 paper is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2022-03:</b> 1 paper is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
                             </li>
                             <li style="margin: 5px;">
@@ -383,6 +386,25 @@ https://templatemo.com/tm-531-reflux
 
                                 <tr>
                                     <td style="padding:20px;width:30%;max-width:30%" align="center">
+                                        <img style="width:100%;max-width:100%" src="assets/images/tip2022_b.png" alt="dise">
+                                    </td>
+                                    <td width="75%" valign="center">
+                                        <papertitle>Unintentional Action Localization via Counterfactual Examples</papertitle>
+                                        <br>
+                                        Jinglin Xu*, <strong>Guangyi Chen*</strong>, Jiwen Lu, and Jie Zhou
+                                        <br>
+                                        <em>IEEE Transactions on Image Processing (<strong>TIP</strong>)</em>, 2022
+                                        <br>
+                                        <a href="https://chengy12.github.io/files/Unintentional_Action_Localization_via_Counterfactual_Examples.pdf">[PDF]</a> 
+                                        <br>
+                                        <p></p>
+                                        <p>We propose an approach to disentangle the effects of content and intention clues by building a counterfactual video pool, which mitigates the negative effect brought by biased action content and highlights the causal effect of intention on model prediction.
+                                        </p>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td style="padding:20px;width:30%;max-width:30%" align="center">
                                         <img style="width:100%;max-width:100%" src="assets/images/tip2022a.jpg" alt="dise">
                                     </td>
                                     <td width="75%" valign="center">
@@ -391,9 +413,9 @@ https://templatemo.com/tm-531-reflux
                                         Jinglin Xu*, <strong>Guangyi Chen*</strong>, Jiwen Lu, and Jie Zhou
                                         <br>
                                         <em>IEEE Transactions on Image Processing (<strong>TIP</strong>)</em>, 2022
-<!--                                         <br>
-                                        <a href="https://chengy12.github.io/files/TIP-24326-2021R2.pdf">[PDF]</a> 
-                                        <br> -->
+                                        <br>
+                                        <a href="https://chengy12.github.io/files/Probabilistic_Temporal_Modeling_for_Unintentional_Action_Localization.pdf">[PDF]</a> 
+                                        <br>
                                         <p></p>
                                         <p>We propose a probabilistic framework for unintentional action localization, in which we model the uncertainty of annotations with temporal label aggregation and use it for training a dense probabilistic localization model.
                                         </p>
