--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="line-dec"></div>
                     <div class="news">
                         <p> 
+                        	<li style="margin: 5px;">
+                                <b>2022-05:</b> 1 paper on domain adaptation is accepted by <a href="https://icml.cc/">ICML'2022</a>.
+                            </li>
                             <li style="margin: 5px;">
                                 <b>2022-04:</b> 1 paper is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
                             </li>
@@ -118,7 +121,7 @@ https://templatemo.com/tm-531-reflux
                             <li style="margin: 5px;">
                                 <b>2021-07:</b> 3 paper on trajectory prediction and attention learning is accepted by <a href="http://iccv2021.thecvf.com/">ICCV'2021</a>.
                             </li>
-                            <li style="margin: 5px;">
+<!--                             <li style="margin: 5px;">
                                 <b>2021-03:</b> 1 paper on unintentional action localization is accepted by <a href="https://2021.ieeeicme.org/">ICME'2021</a>.
                             </li>
                             <li style="margin: 5px;">
@@ -135,7 +138,7 @@ https://templatemo.com/tm-531-reflux
                             </li>
                             <li style="margin: 5px;">
                                 <b>2019-03:</b> 1 paper is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
-                            </li>
+                            </li> -->
                         </p>
                     </div>
                 </div>
@@ -491,7 +494,7 @@ https://templatemo.com/tm-531-reflux
                                         </p>
                                     </td>
                                 </tr>
-                                <tr>
+                                <!-- <tr>
                                     <td style="padding:20px;width:30%;max-width:30%" align="center">
                                         <img style="width:100%;max-width:100%" src="assets/images/icme21.png" alt="dise">
                                     </td>
@@ -507,7 +510,7 @@ https://templatemo.com/tm-531-reflux
                                         <p></p>
                                         <p>We formulate the unintentional action localization as a temporal probabilistic regression problem, and propose to online aggregate multiple annotations using an attention model.</p>
                                     </td>
-                                </tr>
+                                </tr> -->
                                 <tr>
                                     <td style="padding:20px;width:30%;max-width:30%" align="center">
                                         <img style="width:100%;max-width:100%" src="assets/images/0648.jpg" alt="dise">
