--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@ https://templatemo.com/tm-531-reflux
                                 <b>Co-organizer:</b> for the ICME 2019 workshop: The Third Workshop on Human Identification in Multimedia (HIM'19) <a href="http://ivg.au.tsinghua.edu.cn/him19/"> [website]</a>
                             </li>
                             <li style="margin: 5px;">
-                                <b>Conference Reviewer / Program Committee Member:</b> CVPR, ICCV, ICML, NeurIPS, ICLR and so on.
+                                <b>Conference Reviewer / Program Committee Member:</b> CVPR, ICCV, ECCV, ICML, NeurIPS, ICLR and so on.
                             </li>
                             <li style="margin: 5px;">
                                 <b>Journal Reviewer:</b> TIP, TMM, TCSVT and so on.
