--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p> 
                         	<li style="margin: 5px;">
+                                <b>2022-09:</b> I will serve as a publicity chair for <a href="https://www.cclear.cc/">CLeaR'2023</a>.
+                            </li>
+                        	<li style="margin: 5px;">
+                                <b>2022-09:</b> 1 paper on causal representation learning is accepted by <a href="https://neurips.cc/">NeurIPS'2022</a>.
+                            </li>
+                        	<li style="margin: 5px;">
                                 <b>2022-05:</b> 1 paper on domain adaptation is accepted by <a href="https://icml.cc/">ICML'2022</a>.
                             </li>
                             <li style="margin: 5px;">
@@ -694,6 +700,9 @@ https://templatemo.com/tm-531-reflux
                     <h3>Academic Services</h3>
                     <div class="left">
                         <p>
+                            <li style="margin: 5px;">
+                                <b>Publicity Chairs:</b> for CLeaR 2023.
+                            </li>
                             <li style="margin: 5px;">
                                 <b>Co-organizer:</b> for the ICME 2019 workshop: The Third Workshop on Human Identification in Multimedia (HIM'19) <a href="http://ivg.au.tsinghua.edu.cn/him19/"> [website]</a>
                             </li>
