--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p> 
                         	<li style="margin: 5px;">
+                                <b>2022-011:</b> 1 paper on domain adaptation is accepted by <a href="https://aaai.org/Conferences/AAAI-23/">AAAI'2023</a>.
+                            </li>
+                        	<li style="margin: 5px;">
                                 <b>2022-09:</b> I will serve as a publicity chair for <a href="https://www.cclear.cc/">CLeaR'2023</a>.
                             </li>
                         	<li style="margin: 5px;">
@@ -340,6 +343,40 @@ https://templatemo.com/tm-531-reflux
                     <div class="left">
                         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                             <tbody>
+                            	 <tr>
+                                    <td style="padding:20px;width:30%;max-width:30%" align="center">
+                                        <img style="width:100%;max-width:100%" src="assets/images/tdrl.png" alt="dise">
+                                    </td>
+                                    <td width="75%" valign="center">
+                                        <papertitle>Temporally Disentangled Representation Learning</papertitle>
+                                        <br>
+                                        Weiran Yao, <strong>Guangyi Chen</strong>, Kun Zhang
+                                        <br>
+                                        <em>Thirty-sixth Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2022
+                                        <br>
+                                        <a href="https://arxiv.org/pdf/2210.13647.pdf">[Arxiv]</a> Code will come soon.
+                                        <br>
+                                        <p></p>
+                                        <p>We propose a principled framework to recover time-delayed latent causal variables and identify their relations from sequential data under stationary environments or different distribution shifts.</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:20px;width:30%;max-width:30%" align="center">
+                                        <img style="width:100%;max-width:100%" src="assets/images/partial.png" alt="dise">
+                                    </td>
+                                    <td width="75%" valign="center">
+                                        <papertitle>Partial disentanglement for domain adaptation</papertitle>
+                                        <br>
+                                        Lingjing Kong, Shaoan Xie, Weiran Yao, Yujia Zheng, <strong>Guangyi Chen</strong>, Petar Stojanov, Victor Akinwande, Kun Zhang
+                                        <br>
+                                        <em>International Conference on Machine Learning (<strong>ICML</strong>)</em>, 2022
+                                        <br>
+                                        <a href="https://chengy12.github.io/files/partial.pdf">[PDF]</a> 
+                                        <br>
+                                        <p></p>
+                                        <p>We build the data generating process with latent variable model, in which invariant and domain-dependent components are disentangled. We apply this model for domain adaptation and show the partial identifiability under some constraints.</p>
+                                    </td>
+                                </tr>
                                 <tr>
                                     <td style="padding:20px;width:30%;max-width:30%" align="center">
                                         <img style="width:100%;max-width:100%" src="assets/images/mid.jpg" alt="dise">
