--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/38a0ffb475.js" crossorigin="anonymous"></script>
     <title>Guangyi Chen's Homepage</title>
-    <link rel="icon" type="image/png" href="images/icon.png">
+    <link rel="icon" type="image/png" href="assets/images/icon.png">
     <!-- <script src="https://kit.fontawesome.com/38a0ffb475.js" crossorigin="anonymous"></script>
 Reflux Template
 https://templatemo.com/tm-531-reflux
@@ -98,7 +98,7 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p> 
                         	<li style="margin: 5px;">
-                                <b>2022-011:</b> 1 paper on domain adaptation is accepted by <a href="https://aaai.org/Conferences/AAAI-23/">AAAI'2023</a>.
+                                <b>2022-11:</b> 1 paper on domain adaptation is accepted by <a href="https://aaai.org/Conferences/AAAI-23/">AAAI'2023</a>.
                             </li>
                         	<li style="margin: 5px;">
                                 <b>2022-09:</b> I will serve as a publicity chair for <a href="https://www.cclear.cc/">CLeaR'2023</a>.
@@ -345,7 +345,7 @@ https://templatemo.com/tm-531-reflux
                             <tbody>
                             	 <tr>
                                     <td style="padding:20px;width:30%;max-width:30%" align="center">
-                                        <img style="width:100%;max-width:100%" src="assets/images/tdrl.png" alt="dise">
+                                        <img style="width:100%;max-width:100%" src="assets/images/tdrl3.jpg" alt="dise"> 
                                     </td>
                                     <td width="75%" valign="center">
                                         <papertitle>Temporally Disentangled Representation Learning</papertitle>
@@ -360,9 +360,9 @@ https://templatemo.com/tm-531-reflux
                                         <p>We propose a principled framework to recover time-delayed latent causal variables and identify their relations from sequential data under stationary environments or different distribution shifts.</p>
                                     </td>
                                 </tr>
-                                <tr>
+                                <!-- <tr>
                                     <td style="padding:20px;width:30%;max-width:30%" align="center">
-                                        <img style="width:100%;max-width:100%" src="assets/images/partial.png" alt="dise">
+                                        <img style="width:100%;max-width:100%" src="assets/images/partial3.jpg" alt="dise">
                                     </td>
                                     <td width="75%" valign="center">
                                         <papertitle>Partial disentanglement for domain adaptation</papertitle>
@@ -374,9 +374,9 @@ https://templatemo.com/tm-531-reflux
                                         <a href="https://chengy12.github.io/files/partial.pdf">[PDF]</a> 
                                         <br>
                                         <p></p>
-                                        <p>We build the data generating process with latent variable model, in which invariant and domain-dependent components are disentangled. We apply this model for domain adaptation and show the partial identifiability under some constraints.</p>
+                                        <p>We build the data generating process using latent variable model with partial identifiability for domain adaptation, in which invariant and domain-dependent components are disentangled.</p>
                                     </td>
-                                </tr>
+                                </tr>-->
                                 <tr>
                                     <td style="padding:20px;width:30%;max-width:30%" align="center">
                                         <img style="width:100%;max-width:100%" src="assets/images/mid.jpg" alt="dise">
