--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ https://templatemo.com/tm-531-reflux
                                         <a href="https://arxiv.org/pdf/2210.13647.pdf">[Arxiv]</a> Code will come soon.
                                         <br>
                                         <p></p>
-                                        <p>We propose a principled framework to recover time-delayed latent causal variables and identify their relations from sequential data under stationary environments or different distribution shifts.</p>
+                                        <p>A framework to recover time-delayed latent causal variables and identify their relations from sequential data under stationary environments or different distribution shifts.</p>
                                     </td>
                                 </tr>
                                 <!-- <tr>
