--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@ https://templatemo.com/tm-531-reflux
                     <div class="line-dec"></div>
                     <div class="left">
                         <p>
-                            I am currently a Postdoctoral Research Fellow in MBZUAI and CMU, working with Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/"> Kun Zhang </a>. I am broadly interested in computer vision and machine learning. My current research focuses on causality and representation learning in ML, and video understanding, person re-identification and trajectory prediction in CV.
+                            I am currently a Postdoctoral Research Fellow in MBZUAI and CMU, working with Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/"> Kun Zhang </a>. I am broadly interested in computer vision and machine learning. My current research focuses on causality and representation learning in ML, and video understanding, trajectory prediction, and person re-identification in CV.
                         </p>
                         <p>
-                            Prior to that, I received my Ph.D degree at Tsinghua University, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>. In 2016, I obtained my B.Eng. in the Department of Automation, Tsinghua University.
+                            Prior to that, I received my Ph.D degree at Tsinghua University in 2021, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>; and obtained B.Eng. at Tsinghua University In 2016.
                         </p>
                         <p>
                             If you are interested in our work and want to join us, please do not hesitate to drop me an email, <a href="mailto:guangyichen1994@gmail.com"> guangyichen1994(at)gmail.com </a>, with your resume.
@@ -744,10 +744,10 @@ https://templatemo.com/tm-531-reflux
                                 <b>Co-organizer:</b> for the ICME 2019 workshop: The Third Workshop on Human Identification in Multimedia (HIM'19) <a href="http://ivg.au.tsinghua.edu.cn/him19/"> [website]</a>
                             </li>
                             <li style="margin: 5px;">
-                                <b>Conference Reviewer / Program Committee Member:</b> CVPR, ICCV, ECCV, ICML, NeurIPS, ICLR and so on.
+                                <b>Conference Reviewer / Program Committee Member:</b> CVPR, ICCV, ECCV, NeurIPS, ICML, ICLR and so on.
                             </li>
                             <li style="margin: 5px;">
-                                <b>Journal Reviewer:</b> TIP, TMM, TCSVT and so on.
+                                <b>Journal Reviewer:</b> TIP, IJCV, TMM, TCSVT and so on.
                             </li>
                         </p>
                     </div>
