--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@ https://templatemo.com/tm-531-reflux
                                 <b>2022-05:</b> 1 paper on domain adaptation is accepted by <a href="https://icml.cc/">ICML'2022</a>.
                             </li>
                             <li style="margin: 5px;">
-                                <b>2022-04:</b> 1 paper is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
+                                <b>2022-04:</b> 2 paper on video understanding is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
                             </li>
-                            <li style="margin: 5px;">
+<!--                             <li style="margin: 5px;">
                                 <b>2022-03:</b> 1 paper is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
-                            </li>
+                            </li> -->
                             <li style="margin: 5px;">
                                 <b>2022-03:</b> 3 paper is accepted by <a href="https://cvpr2022.thecvf.com/">CVPR'2022</a>, 1 oral.
                             </li>
