--- a/index.html
+++ b/index.html
@@ -338,6 +338,11 @@ https://templatemo.com/tm-531-reflux
                 <div class="section-heading">
                     <h2>Publications</h2>
                     <div class="line-dec"></div>
+                    <div class="left">
+                        <p>
+                            Some selected recent publications. Please see <a href="https://scholar.google.com/citations?hl=zh-CN&user=3lr1jTgAAAAJ"> Google Scholar</a>    <!-- <a href="https://www.andrew.cmu.edu/user/kunz1/"> Google Scholar</a> --> for details.
+                        </p>
+                    </div>
                     <!--                 </div>
                 <div class="row"> -->
                     <div class="left">
