--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p> 
                         	<li style="margin: 5px;">
+                                <b>2023-01:</b> 2 papers on prompt learning (<a href="https://arxiv.org/abs/2210.01253">PLOT</a> as <strong>spotlight</strong>) and video understanding are accepted by <a href="https://iclr.cc/">ICLR'2023</a>.
+                            </li>
+                        	<li style="margin: 5px;">
                                 <b>2022-11:</b> 1 paper on domain adaptation is accepted by <a href="https://aaai.org/Conferences/AAAI-23/">AAAI'2023</a>.
                             </li>
                         	<li style="margin: 5px;">
@@ -110,13 +113,13 @@ https://templatemo.com/tm-531-reflux
                                 <b>2022-05:</b> 1 paper on domain adaptation is accepted by <a href="https://icml.cc/">ICML'2022</a>.
                             </li>
                             <li style="margin: 5px;">
-                                <b>2022-04:</b> 2 paper on video understanding is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
+                                <b>2022-04:</b> 2 paper on video understanding are accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
                             </li>
 <!--                             <li style="margin: 5px;">
                                 <b>2022-03:</b> 1 paper is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
                             </li> -->
                             <li style="margin: 5px;">
-                                <b>2022-03:</b> 3 paper is accepted by <a href="https://cvpr2022.thecvf.com/">CVPR'2022</a>, 1 oral.
+                                <b>2022-03:</b> 3 paper (including 1 <strong>oral</strong>) are accepted by <a href="https://cvpr2022.thecvf.com/">CVPR'2022</a>.
                             </li>
                             <li style="margin: 5px;">
                                 <b>2021-11:</b> Our python package for causal discovery <a href="https://causal-learn.readthedocs.io/en/latest/">causal-learn</a> is released. Any feedback is welcome.
@@ -128,7 +131,7 @@ https://templatemo.com/tm-531-reflux
                                 <b>2021-07:</b> 1 paper on person re-identification and attention learning is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
                             </li>
                             <li style="margin: 5px;">
-                                <b>2021-07:</b> 3 paper on trajectory prediction and attention learning is accepted by <a href="http://iccv2021.thecvf.com/">ICCV'2021</a>.
+                                <b>2021-07:</b> 3 paper on trajectory prediction and attention learning are accepted by <a href="http://iccv2021.thecvf.com/">ICCV'2021</a>.
                             </li>
 <!--                             <li style="margin: 5px;">
                                 <b>2021-03:</b> 1 paper on unintentional action localization is accepted by <a href="https://2021.ieeeicme.org/">ICME'2021</a>.
