--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ https://templatemo.com/tm-531-reflux
                             Prior to that, I received my Ph.D degree at Tsinghua University in 2021, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>; and obtained B.Eng. at Tsinghua University in 2016.
                         </p>
                         <p>
-                            If you are interested in our work and want to join us, please do not hesitate to drop me an email, <a href="mailto:guangyichen1994@gmail.com"> guangyichen1994(at)gmail.com </a>, with your resume.
+                            Feel free to drop me an e-mail <a href="mailto:guangyichen1994@gmail.com"> guangyichen1994(at)gmail.com </a>, if you are interested in our research and want to discuss relevant research topics or potential collaborations.
                         </p>
                     </div>
                 </div>
@@ -101,7 +101,7 @@ https://templatemo.com/tm-531-reflux
                                 <b>2023-01:</b> 2 papers on prompt learning (<a href="https://arxiv.org/abs/2210.01253">PLOT</a> as <strong>Spotlight</strong>) and video understanding are accepted by <a href="https://iclr.cc/">ICLR'2023</a>.
                             </li>
                             <li style="margin: 5px;">
-                                <b>2022-11:</b> 1 paper on domain adaptation is accepted by <a href="https://aaai.org/Conferences/AAAI-23/">AAAI'2023</a> as <strong>Oral</strong>).
+                                <b>2022-11:</b> 1 paper on domain adaptation is accepted by <a href="https://aaai.org/Conferences/AAAI-23/">AAAI'2023</a> as <strong>Oral</strong>.
                             </li>
                             <li style="margin: 5px;">
                                 <b>2022-09:</b> I will serve as a publicity chair for <a href="https://www.cclear.cc/">CLeaR'2023</a>.
